--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="mini-divider-green"></div>
         </div>
         <div class="header-btn-container">
-            <button type="button">Cambia percentuali</button>
+            <a href="#popup" type="button">Cambia percentuali</a>
         </div>
       </div>
     </div>
@@ -86,10 +86,64 @@
    </section>
    <section class="main">
       <div class="filter-btn-container">
-          
-      </div> 
+        <span class="filter-label">Ordina per</span>
+       <button class="filter-btn active" type="button">Costo</button>
+        <button class="filter-btn" type="button">Potenza</button>
+        <button class="filter-btn"type="button">Cilindrata</button>
+        <button class="filter-btn"type="button">Marca</button>
+      </div>
+      <div class="car-container">
+          <div class="single-car">
+              <div class="single-car-img">
+                  <img src="./assets/images/cars/car1.png" alt="car one">
+              </div>
+              <div class="single-car-content">
+                  <h2 class="single-car-name">VOLKSWAGEN ECO UP! <span>move 5 porte</span></h2>
+              </div>
+          </div>
+        <div class="single-car">
+            <div class="single-car-img">
+                <img src="./assets/images/cars/car2.png" alt="car one">
+            </div>
+            <div class="single-car-content">
+                <h2 class="single-car-name">FORD FIESTA  <span>1.1 75 CV Gpl 5 porte</span></h2>
+            </div>
+        </div>
+        <div class="single-car">
+            <div class="single-car-img">
+                <img src="./assets/images/cars/car1.png" alt="car one">
+            </div>
+            <div class="single-car-content">
+                <h2 class="single-car-name">HYUNDAY IONIQ <span>ELECTRIC EV 38.3 kWh</span></h2>
+            </div>
+        </div>
+      </div>
    </section>
-   </div>
 
+ 
+   </div>
+<div id="popup">
+    <div class="popup-content">
+        <h1 class="popup-title">Dove usi l’auto?</h1>
+        <p class="popup-text">Utilizza i <b class="orange">cursori</b> per modificare le percentuali relative al tipo di percorso che fai abitualmente, una volta impostati
+        i valori clicca su Ricalcola</p>
+        <div class="stats-cards-block">
+            <div class="stats-card">
+                <h1 class="stats-card-num yellow">33<sup>%</sup></h1>
+                <p class="stats-card-text">Città</p>
+            </div>
+            <div class="stats-card">
+                <h1 class="stats-card-num blue">33<sup>%</sup></h1>
+                <p class="stats-card-text">Statale</p>
+            </div>
+            <div class="stats-card">
+                <h1 class="stats-card-num green">33<sup>%</sup></h1>
+                <p class="stats-card-text">Autostrada</p>
+            </div>
+        </div>
+            
+        <a class="close-popup" href="#">&times;</a>
+    </div>
+</div>
 </body>
 </html>
